Fix mobile version overflowing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -16,8 +16,8 @@ body {
     color: #fff;
     background-color: #000;
     overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
 
     display: flex;
     flex-direction: column;
